--- a/.github/workflows/05-build-and-deploy-application.yml
+++ b/.github/workflows/05-build-and-deploy-application.yml
@@ -132,7 +132,7 @@ jobs:
     runs-on: ubuntu-22.04
     permissions:
       security-events: write
-    needs: build-and-publish
+    needs: build-and-publish-docker-image
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -160,7 +160,7 @@ jobs:
   deploy-application:
     runs-on: ubuntu-22.04
     name: Deploy the application to AWS
-    needs: build-and-publish
+    needs: build-and-publish-docker-image
     timeout-minutes: 20
     concurrency: book-library-service-deployment
     steps:
@@ -183,11 +183,11 @@ jobs:
 
       - name: Deploy service stack
         env:
-          DOCKER_IMAGE_TAG: ${{ needs.build-and-publish.outputs.DOCKER_IMAGE_TAG }}
+          DOCKER_IMAGE_TAG: ${{ needs.build-and-publish-docker-image.outputs.DOCKER_IMAGE_TAG }}
         working-directory: cdk
         run: npm run service:deploy -- -c dockerImageTag=${DOCKER_IMAGE_TAG} -c environmentName=staging
 
-      # Each Service stack updates creates a new parameter stack that CloudFormation does not clean up automatically.
+      # Each Service stack update creates a new parameter stack that CloudFormation does not clean up automatically.
       # This step deletes all "*service-params*" stacks except the latest one to keep the house clean.
       - name: Clean up old parameter stacks
         env:
