--- a/.github/workflows/06-create-aws-canary.yml
+++ b/.github/workflows/06-create-aws-canary.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   deploy-canary-stack:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-22.04
     name: Deploy the Canary stack
     steps:
