--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,9 +40,15 @@ logback-awslogs-json = { module = "de.siegmar:logback-awslogs-json-encoder", ver
 # code quality
 palantir-javaformat = { module = "com.palantir.javaformat:palantir-java-format", version = "2.47.0" }
 
+# code migration
+rewrite-recipe-bom = { module = "org.openrewrite.recipe:rewrite-recipe-bom", version = "2.12.0" }
+rewrite-migrate-java = { module = "org.openrewrite.recipe:rewrite-migrate-java" }
+rewrite-spring = { module = "org.openrewrite.recipe:rewrite-spring" }
+
 # gradle plugins
 spring-boot = { module = "org.springframework.boot:spring-boot-gradle-plugin", version = "3.3.0" }
 git-properties = { module = "com.gorylenko.gradle-git-properties:gradle-git-properties", version = "2.4.2" }
 diffplug-spotless = { module = "com.diffplug.spotless:spotless-plugin-gradle", version = "6.25.0" }
 sonarqube = { module = "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin", version = "5.0.0.4638" }
 cyclonedx-sbom = { module = "org.cyclonedx:cyclonedx-gradle-plugin", version = "1.8.2" }
+open-rewrite = { module = "org.openrewrite:plugin", version = "6.16.0" }
