--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -10,7 +10,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: info,health,metrics
+        include: info,health,metrics,sbom
   cloudwatch:
     metrics:
       export:
