--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -39,6 +39,9 @@ spring:
     hibernate:
       ddl-auto: none
     open-in-view: false
+  threads:
+    virtual:
+      enabled: true
 
 custom:
   invitation-codes: DUKE, MIKE
